# srcsetter

./: .gitignore  .opambuild.sh  LICENSE.md  TODO.md  dune-project  srcsetter-cmd.opam  srcsetter.opam
lib/: dune  srcsetter.ml  srcsetter.mli  srcsetter_cmd.ml
